--- a/arp_mjpnl_initialisierung/build.gradle
+++ b/arp_mjpnl_initialisierung/build.gradle
@@ -29,7 +29,7 @@ task initialisierung(type: Ili2pgReplace) {
     dbschema = "arp_mjpnl_v1"
     models = 'SO_ARP_MJPNL_20201026'
     topics = "MJPNL"
-    datafile = Paths.get(pathToTempFolder,'mjpnl_init.xtf')
+    datafile = "mjpnl_init.xtf" // Parameter von Jenkins übergeben
     dataset = "MJPNL"
     logfile = "ili2pgimport.log"
 }
