[arp_mjpnl_initialisierung] include include again

--- a/arp_mjpnl_initialisierung/build.gradle
+++ b/arp_mjpnl_initialisierung/build.gradle
@@ -28,6 +28,7 @@ remotes {
 task copyXtfFile(type: Copy) {
     from "upload/"
     into "upload/"
+    include("uploadFile")
     rename("uploadFile", "mjpnl_init.xtf")
 }
 
