[arp_mjpnl_initialisierung] reintroduce dataset param in ili2pgreplace (required param for replace)

--- a/arp_mjpnl_initialisierung/build.gradle
+++ b/arp_mjpnl_initialisierung/build.gradle
@@ -38,6 +38,7 @@ task initialisierung(type: Ili2pgReplace, dependsOn: 'copyXtfFile') {
     models = "SO_ARP_MJPNL_20201026"
     topics = "MJPNL"
     dataFile = "upload/mjpnl_init.xtf"
+    dataset = "MJPNL"
     logFile = "ili2pgimport.log"
 }
 
