Rename default branch

--- a/arp_nutzungsplanung_delete_dataset/Jenkinsfile
+++ b/arp_nutzungsplanung_delete_dataset/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     stages {
         stage('Run GRETL-Job') {
             steps {
-                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'master'}", changelog: false
+                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'main'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
                         sh "gretl -Pbfsnr=${params.bfsnr}"
