--- a/arp_nutzungsplanung_kanton_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_kanton_pub/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
             agent { label 'gretl' }
             steps {
                 script { currentBuild.description = "${params.buildDescription}" }
-                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'master'}", changelog: false
+                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'main'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
                         sh "gretl importXTF_stage"
