--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "54321:5432"
     volumes:
-      - ./development_dbs/setup.sql:/pgconf/setup.sql
+      - ./setup.sql:/pgconf/setup.sql
       - sshd_edit:/sshd
       - pgconf_edit:/pgconf
       - pgdata_edit:/pgdata
@@ -42,7 +42,7 @@ services:
     ports:
       - "54322:5432"
     volumes:
-      - ./development_dbs/setup.sql:/pgconf/setup.sql
+      - ./setup.sql:/pgconf/setup.sql
       - sshd_pub:/sshd
       - pgconf_pub:/pgconf
       - pgdata_pub:/pgdata
