[arp_naturreservate_pub] Anpassung Jenkinsfile

--- a/arp_naturreservate_pub/Jenkinsfile
+++ b/arp_naturreservate_pub/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
                 git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'main'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
+                        sh "gretl importXTF_stage"
                         zip zipFile: 'xtfdata.zip', glob: '*.xtf', archive: true
                     }
                 }
@@ -35,6 +36,7 @@ pipeline {
                 unstash name: "gretljob"
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
+                        sh "gretl importXTF_pub"
                     }
                 }
             }
