[arp_naturreservate_pub] Anpassung task Delete mit SQLExecutor statt mit ili2pg --delete

--- a/arp_naturreservate_pub/Jenkinsfile
+++ b/arp_naturreservate_pub/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'main'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
-                        sh "gretl importXTF_stage"
+                        sh "gretl validateData"
                         zip zipFile: 'xtfdata.zip', glob: '*.xtf', archive: true
                     }
                 }
