--- a/afu_gepgwp_pub/build.gradle
+++ b/afu_gepgwp_pub/build.gradle
@@ -5,12 +5,7 @@ apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'importDataAfuGEPGWPPub'
 
-task deleteDataAfuGEPGWPPub(type: SqlExecutor) {
-    database = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlFiles = ["delete_gepgwp_pub.sql"]
-}
-
-task importDataAfuGEPGWPPub(type: Db2Db, dependsOn: 'deleteDataAfuGEPGWPPub') {
+task importDataAfuGEPGWPPub(type: Db2Db) {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
