[awjf_statische_waldgrenze] neue Task für Review ergänzt

--- a/awjf_statische_waldgrenze_pub/job.properties
+++ b/awjf_statische_waldgrenze_pub/job.properties
@@ -1,1 +1,3 @@
+logRotator.numToKeep=unlimited
+parameters.stringParams:buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
 authorization.permissions=gretl-users-vkfaa
