--- a/awjf_statische_waldgrenze_pub/build.gradle
+++ b/awjf_statische_waldgrenze_pub/build.gradle
@@ -3,12 +3,68 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferStatischeWaldgrenzen'
+defaultTasks 'validateData', 'importXTF_pub'
 
-task transferStatischeWaldgrenzen(type: Db2Db) {
+def FileName = "awjf_statische_waldgrenze.xtf"
+def FileNamePub = "awjf_statische_waldgrenze_pub.xtf"
+
+task exportDataEdit (type: Ili2pgExport) {
+    description = "Exportiert die Daten aus dem Schema awjf_statische_waldgrenze in eine INTERLIS-Datei."
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    dbschema = 'awjf_statische_waldgrenze'
+    models = 'SO_AWJF_Statische_Waldgrenzen_20191119'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
+    dataFile= file(FileName)
+    disableValidation = true
+}
+
+task validateDataEdit(type: IliValidator, dependsOn: 'exportDataEdit') {
+    description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
+    dataFiles = file(FileName)
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
+    failOnError = true
+}
+
+task transferStatischeWaldgrenzen(type: Db2Db, dependsOn: 'validateDataEdit') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('waldgrenze_waldgrenze.sql', 'awjf_statische_waldgrenze_pub_v1.waldgrenze_waldgrenze', true)
+            new TransferSet('waldgrenze_waldgrenze.sql', 'awjf_statische_waldgrenze_staging_v1.waldgrenze_waldgrenze', true)
     ];
+}
+
+task exportData (type: Ili2pgExport, dependsOn: 'transferStatischeWaldgrenzen') {
+    description = "Exportiert die umgebauten Daten aus dem Schema awjf_statische_waldgrenze_staging in ein INTERLIS-Datei."
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    dbschema = 'awjf_statische_waldgrenze_staging_v1'
+    models = 'SO_AWJF_Statische_Waldgrenzen_Publikation_20191119'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
+    dataFile= file(FileNamePub)
+    disableValidation = true
+}
+
+task validateData(type: IliValidator, dependsOn: 'exportData') {
+    description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
+    dataFiles = file(FileNamePub)
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
+    failOnError = true
+}
+
+task deleteData_staging_pub (type: SqlExecutor) {
+    description = "Löscht/leert die Daten aus dem Schema awjf_statische_waldgrenze_staging"
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ["delete_awjf_statische_waldgrenze_staging.sql"]
+}
+
+
+task importXTF_pub(type: Ili2pgImport) {
+    description = 'Import der umgebaute INTERLIS-Datei in das Schema awjf_statische_waldgrenze_pub.'
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    dbschema = 'awjf_statische_waldgrenze_pub_v1'
+    models = 'SO_AWJF_Statische_Waldgrenzen_Publikation_20191119'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
+    dataFile = file(FileNamePub)
+    deleteData = true
+    disableValidation = true
+    finalizedBy deleteData_staging_pub, refreshSolr
 }
