--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -70,6 +70,13 @@ task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAg
             new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
     ]
+
+    finalizedBy 'fixGeometries'
+}
+
+task fixGeometries(type: SqlExecutor) {
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['fix_geometries.sql']
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
