--- a/avt_strassenlaerm/build.gradle
+++ b/avt_strassenlaerm/build.gradle
@@ -5,8 +5,8 @@ import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 import java.nio.file.Paths
 
-defaultTasks 'transferData'
-//defaultTasks 'replaceDataset'
+//defaultTasks 'transferData'
+defaultTasks 'replaceDataset'
 
 ext {
     pathToTempFolder = System.getProperty("java.io.tmpdir")
@@ -29,7 +29,7 @@ task downloadData(type: Download) {
 task replaceDataset (type: Ili2pgReplace, dependsOn: downloadData) {
     description = "Ersetzt die Daten in der Edit-DB."
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-    dbschema = "avt_strassenlaerm"
+    dbschema = "avt_strassenlaerm_v1"
     models = "SO_AVT_Strassenlaerm_20190806"
     if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     disableValidation = true
@@ -40,10 +40,10 @@ task replaceDataset (type: Ili2pgReplace, dependsOn: downloadData) {
 }
 
 
-task transferData(type: Db2Db, dependsOn: replaceDataset) {
-    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
-    transferSets = [
-            new TransferSet("transform_immission_strasse_pointofdetermination.sql", 'avt_strassenlaerm_pub.strassenlaerm_belastung', true)
-    ];
-}
+//task transferData(type: Db2Db, dependsOn: replaceDataset) {
+//    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+//    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+//    transferSets = [
+//            new TransferSet("transform_immission_strasse_pointofdetermination.sql", 'avt_strassenlaerm_pub.strassenlaerm_belastung', true)
+//    ];
+//}
