--- a/afu_grundwassergeometrie_pub/build.gradle
+++ b/afu_grundwassergeometrie_pub/build.gradle
@@ -3,18 +3,23 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfuGrundwasserkoerper'
+apply plugin: 'ch.so.agi.gretl'
 
-task transferAfuGrundwasserkoerper (type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+defaultTasks 'transferAfuGrundwassergeometriePub'
+
+task transferAfuGrundwassergeometriePub(type: Db2Db) {
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('aww_gshiso.sql', 'afu_grundwassergeometrie_pub.aww_gshiso', true),
-            new TransferSet('aww_gshora.sql', 'afu_grundwassergeometrie_pub.aww_gshora', true),
-            new TransferSet('aww_gwomac.sql', 'afu_grundwassergeometrie_pub.aww_gwomac', true),
-            new TransferSet('aww_gsmora.sql', 'afu_grundwassergeometrie_pub.aww_gsmora', true),
-            new TransferSet('aww_gsmiso.sql', 'afu_grundwassergeometrie_pub.aww_gsmiso', true),
-            new TransferSet('aww_gstira.sql', 'afu_grundwassergeometrie_pub.aww_gstira', true),
-            new TransferSet('aww_gstiso.sql', 'afu_grundwassergeometrie_pub.aww_gstiso', true)
-    ]
+            new TransferSet('grundwasser_maechtigkeit_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasser_maechtigkeit', true),
+            new TransferSet('grundwasser_mittelstand_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasser_mittelstand', true),
+            new TransferSet('grundwasser_tiefstand_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasser_tiefstand', true),
+            new TransferSet('grundwasserstrom_begrenzung_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasserstrom_begrenzung_hgw', true),
+            new TransferSet('isohypse_hoechster_grundwasserstand_pub.sql', 'afu_grundwassergeometrie_pub_v1.isohypse_hoechster_grundwasserstand', true),
+            new TransferSet('isohypse_mittlerer_grundwasserstand_pub.sql', 'afu_grundwassergeometrie_pub_v1.isohypse_mittlerer_grundwasserstand', true),
+            new TransferSet('isohypse_tiefer_grundwasserstand_pub.sql', 'afu_grundwassergeometrie_pub_v1.isohypse_tiefer_grundwasserstand', true),
+            new TransferSet('grundwasserspiegel_mittel_tief_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasserspiegel_mittel_tief', true),
+            new TransferSet('grundwasserstauer_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasserstauer', true),
+            new TransferSet('grundwasser_wasseramt_pub.sql', 'afu_grundwassergeometrie_pub_v1.grundwasser_wasseramt', true)
+    ];
 }
